# modern-pdfium-cmake-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
docs/: API.md  API_Usage_Guide.md  PDFium_API_Reference.md
examples/: CMakeLists.txt  annotation.cpp  basic.cpp  bookmark.cpp  render.cpp  search.cpp  text.cpp
include/pdfium/: annotation.h  attachment.h  bitmap.h  bookmark.h  core.h  dataavail.h  document.h  font.h  form.h  image.h  link.h  page.h  path.h  pdfium.h  save.h  signature.h  struct_tree.h  text.h  types.h
src/: annotation.cpp  attachment.cpp  bitmap.cpp  bookmark.cpp  core.cpp  dataavail.cpp  document.cpp  font.cpp  form.cpp  image.cpp  link.cpp  page.cpp  path.cpp  save.cpp  signature.cpp  struct_tree.cpp  text.cpp
